# dial-in

./: .env.example  .gitignore  2026-05-31-synthetic-data-and-demo-design.md  PRD.md  README.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml  secrets.example.toml
docs/: 2026-05-31-synthetic-data-and-demo-design.md  Architecture.md  PRD.md  Phased_Build_Plan.md  pre-onboarding-checklist.md
migrations/: 001_init.sql  002_rls.sql  003_recommendation_override_reason.sql  004_category_economics_values_source.sql  005_location_hours.sql  006_pos_imports.sql  007_forecast_actuals_and_recommendation_audit.sql  008_decensor_probe.sql  009_pilot_readiness.sql  010_drop_stale_recommendations_unique.sql  011_location_coordinates.sql  012_weather_provenance.sql  013_pilot_window_integrity.sql
scripts/: __init__.py  ci_create_app_role.py  fetch_weather.py  generate_synthetic_data.py  load_observed_data.py  migrate.py  precompute_demo_recommendations.py  refresh_demo_data.py  scheduled_refresh.py  train_shared_environment.py  validate_realism.py
tests/: conftest.py  test_app_smoke.py  test_censoring.py  test_charts.py  test_config.py  test_demo_freshness.py  test_demo_truth.py  test_engine.py  test_generator_validation.py  test_intraday_sellout.py  test_loader.py  test_metrics.py  test_migrate_script.py  test_migrations.py  test_pilot_report.py  test_pos_import.py  test_repository.py  test_repository_pos_import.py  test_repository_recommendations.py  test_rls_isolation.py  test_shared_environment.py  test_sku_level.py  test_streamlit_cache_performance.py  (+4 more)
(+42 files in other folders)
