[project]
name = "dial-in"
version = "0.1.0"
description = "Synthetic Dial In demo for café fresh-prep recommendations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=6",
    "psycopg[binary,pool]>=3.2",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "streamlit-authenticator>=0.3",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dialin"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["data/", ".venv/"]
files = ["app.py", "src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
